--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -67,6 +67,9 @@ altında yazısı olan kayan fotoğraflar olarak düşünebiliriz  -->
       <div class="carousel-item">
         <img class="d-block w-100" src="makif.jpeg" alt="Third slide">
       </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="Saü.foto.jpg" alt="Third slide">
+      </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
