--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -34,6 +34,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Anasayfa</a>
         </li>
+         <li class="nav-item">
+          <a class="nav-link" href="#">Şehrim</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Hakkında</a>
         </li>
