--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -43,6 +43,10 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Mirasımız</a>
         </li>
+         <li class="nav-item">
+          <a class="nav-link" href="#">İlgi Alanlarım</a>
+        </li>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="#">İletişim</a>
         </li>
