--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -48,6 +48,9 @@
         </li>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#">Login</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#">İletişim</a>
         </li>
        
