--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -98,7 +98,7 @@ altında yazısı olan kayan fotoğraflar olarak düşünebiliriz  -->
   
 
   <footer class=" bg-dark text-white p-2 text-center mt-2">
-    selam
+    Selam
   </footer>
 
   <main>
